--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-validator": "^6.4.1",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.13"
+    "mongoose": "^5.9.13",
+    "request": "^2.88.2"
   }
 }
