--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "concurrently": "^5.2.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.1",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.13",
+    "nodemon": "^2.0.4",
     "normalize-url": "^5.0.0",
-    "request": "^2.88.2",
-    "nodemon": "^2.0.4"
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
