--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "reactapp",
   "version": "1.0.0",
   "description": "React Application",
+  "engines": {
+    "node": "14.18.3",
+    "npm": "6.14.15"
+  },
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
